--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -12,7 +12,7 @@ jobs:
   test_pykokkos:
     strategy:
       matrix:
-        platform: [ubuntu-latest]
+        platform: [ubuntu-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10"]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -21,11 +21,27 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      - if: ${{matrix.platform == 'macos-latest'}}
+        name: Install MacOS deps
+        run: |
+          brew install automake patchelf
+      - if: ${{matrix.platform == 'ubuntu-latest'}}
+        name: Install Linux deps
+        run: |
+          python -m pip install patchelf
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade numpy mypy cmake pytest pybind11 scikit-build patchelf
-      - name: Install pykokkos-base
+          python -m pip install --upgrade numpy mypy cmake pytest pybind11 scikit-build
+      - if: ${{matrix.platform == 'macos-latest'}}
+        name: Install pykokkos-base on MacOS
+        run: |
+          cd /tmp
+          git clone https://github.com/kokkos/pykokkos-base.git
+          cd pykokkos-base
+          python setup.py install -- -DENABLE_LAYOUTS=ON -DENABLE_MEMORY_TRAITS=OFF -DKokkos_ENABLE_OPENMP=OFF
+      - if: ${{matrix.platform == 'ubuntu-latest'}}
+        name: Install pykokkos-base on Linux
         run: |
           cd /tmp
           git clone https://github.com/kokkos/pykokkos-base.git
