ENH: add product ufunc up to 3D
* add 1D-3D support for the `prod()` reduction ufunc;
largely copies the similar infrastructure for `sum()`
from gh-52 and has the same caveats I think

--- a/mypy.ini
+++ b/mypy.ini
@@ -92,3 +92,5 @@ ignore_errors = True
 [mypy-pykokkos.core.translators.bindings]
 ignore_errors = True
 
+[mypy-pykokkos.lib.ufuncs]
+ignore_errors = True
