--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade numpy mypy cmake pytest pybind11 scikit-build patchelf
+          python -m pip install --upgrade numpy mypy cmake pytest pybind11 scikit-build patchelf pytest-cov codecov
       - name: Install pykokkos-base
         run: |
           cd /tmp
@@ -39,4 +39,8 @@ jobs:
           mypy pykokkos
       - name: run tests
         run: |
-          python runtests.py
+          python runtests.py --coverage
+      - name: codecov check
+        uses: codecov/codecov-action@v2
+        with:
+          fail_ci_if_error: False
