ENH: equal() to API standard
* adjust the `equal()` ufunc to pass its array
API standard test, and turn this test on in the CI

* the changes include improved broadcasting and
(type) casting support

* because equality testing is so common/rampant, this
required a few more shims than I'd like...

--- a/.github/workflows/array_api.yml
+++ b/.github/workflows/array_api.yml
@@ -30,7 +30,7 @@ jobs:
           cd /tmp
           git clone https://github.com/kokkos/pykokkos-base.git
           cd pykokkos-base
-          python setup.py install -- -DENABLE_LAYOUTS=ON -DENABLE_MEMORY_TRAITS=OFF
+          python setup.py install -- -DENABLE_LAYOUTS=ON -DENABLE_MEMORY_TRAITS=OFF -DENABLE_VIEW_RANKS=5
       - name: Install pykokkos
         run: |
           python -m pip install .
